--- a/package.json
+++ b/package.json
@@ -4,19 +4,72 @@
   "description": "Service Objects for Marionette Apps",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/benmccormick/marionette-service.git"
   },
   "keywords": [
     "backbone",
     "marionette",
-    "service"
+    "service",
+    "radio"
   ],
+  "main": "./dist/marionette-service.js",
+  "scripts": {
+    "test": "gulp",
+    "test-browser": "gulp test-browser",
+    "build": "gulp build",
+    "coverage": "gulp coverage"
+  },
+  "bugs": {
+    "url": "https://github.com/benmccormick/marionette-service/issues"
+  },
+  "homepage": "https://github.com/benmccormick/marionette-service",
   "author": "Ben McCormick",
   "license": "MIT",
   "dependencies": {
     "backbone.marionette": "^2.1.4",
-    "backbone.radio": "^0.9.0"
+    "backbone.radio": "^0.9.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
+    "babel": "^5.0.0",
+    "babelify": "^6.0.0",
+    "browserify": "^8.1.1",
+    "chai": "^2.0.0",
+    "del": "^1.1.1",
+    "esperanto": "^0.6.7",
+    "glob": "^4.3.5",
+    "gulp": "^3.8.10",
+    "gulp-babel": "^5.0.0",
+    "gulp-file": "^0.2.0",
+    "gulp-filter": "^2.0.0",
+    "gulp-header": "^1.2.2",
+    "gulp-istanbul": "^0.6.0",
+    "gulp-jscs": "^1.4.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-livereload": "^3.4.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-notify": "^2.1.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglifyjs": "^0.6.0",
+    "isparta": "^2.2.0",
+    "jshint-stylish": "^1.0.0",
+    "mkdirp": "^0.5.0",
+    "mocha": "^2.1.0",
+    "run-sequence": "^1.0.2",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.7.0",
+    "vinyl-source-stream": "^1.0.0"
+  },
+  "babelBoilerplateOptions": {
+    "entryFileName": "marionette-service",
+    "exportVarName": "Marionette.Service",
+    "mochaGlobals": [
+      "stub",
+      "spy",
+      "expect"
+    ]
   }
 }
