--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,16 @@ node_js:
 env:
   global: MAINRUN=true
   matrix:
-    - UNDERSCORE=1.4.4 BACKBONE=1.0
-    - UNDERSCORE=1.5 BACKBONE=1.0
-    - UNDERSCORE=1.7 BACKBONE=1.1
-    - UNDERSCORE=1.7 BACKBONE=1.0
     - UNDERSCORE=1.6 BACKBONE=1.0
-    - UNDERSCORE=1.4.4 BACKBONE=1.1.0
-    - UNDERSCORE=1.5 BACKBONE=1.1
+    - UNDERSCORE=1.6 BACKBONE=1.1
+    - UNDERSCORE=1.7 BACKBONE=1.1
+    - UNDERSCORE=1.8 BACKBONE=1.1
     - LODASH=2.4 BACKBONE=1.1
     - LODASH=3.0 BACKBONE=1.1
-    - LODASH=3.1 BACKBONE=1.0
-    - UNDERSCORE=1.6 BACKBONE=1.1 MARIONETTE=2.1
-    - UNDERSCORE=1.6 BACKBONE=1.1 MARIONETTE=2.2
+    - LODASH=3.7 BACKBONE=1.1
     - UNDERSCORE=1.8 BACKBONE=1.1 MARIONETTE=2.3
     - UNDERSCORE=1.8 BACKBONE=1.1 MARIONETTE=2.4
+    - LODASH=3.7 BACKBONE=1.1 MARIONETTE=2.4
 before_install:
   - npm config set ca ""
 install:
