--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "marionette-service",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "homepage": "https://github.com/benmccormick/marionette-service",
   "authors": [
     "Ben McCormick <ben.mccormick@alumni.duke.edu>"
@@ -30,7 +30,7 @@
     "package.json"
   ],
   "dependencies": {
-    "backbone.marionette": "~2.4.2",
+    "backbone": "~1.3.3",
     "backbone.radio": "~1.0.1",
     "underscore": "~1.8.3"
   }
