--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marionette-service",
-  "version": "0.0.7",
-  "description": "Service Objects for Marionette Apps",
+  "version": "1.0.0",
+  "description": "Service Objects for Backbone Apps",
   "repository": {
     "type": "git",
     "url": "https://github.com/benmccormick/marionette-service.git"
@@ -26,12 +26,11 @@
   "author": "Ben McCormick",
   "license": "MIT",
   "dependencies": {
-    "backbone.marionette": "^2.4.2",
     "backbone.radio": "^1.0.1",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "backbone": "^1.3.3"
   },
   "devDependencies": {
-    "backbone": "^1.1.2",
     "jquery": "^1.11.2",
     "browserify": "^8.1.1",
     "chai": "^2.0.0",
