--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "homepage": "https://github.com/benmccormick/marionette-service",
   "author": "Ben McCormick",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "backbone.radio": "^1.0.1",
     "underscore": "1.8.3",
     "backbone": "^1.3.3"
   },
   "devDependencies": {
+    "backbone.radio": "^1.0.1",
+    "underscore": "1.8.3",
+    "backbone": "^1.3.3",
     "jquery": "^1.11.2",
     "browserify": "^8.1.1",
     "chai": "^2.0.0",
