--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "author": "Ben McCormick",
   "license": "MIT",
   "peerDependencies": {
-    "backbone.radio": "^1.0.1",
-    "underscore": "1.8.3",
+    "backbone.radio": "^2.0.0",
+    "underscore": "^1.8.3",
     "backbone": "^1.3.3"
   },
   "devDependencies": {
-    "backbone.radio": "^1.0.1",
+    "backbone.radio": "^2.0.0",
     "underscore": "1.8.3",
     "backbone": "^1.3.3",
     "jquery": "^1.11.2",
